Sun May 16 18:09:36 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* libexslt/date.h: fixing a small portability problem on Solaris
	  for the declaration of localtime_r bug #140468

Sun May 16 16:36:38 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* libxslt.m4: applied patch from Edward Rudd to fix the problems
	  raised in bug #142429
	  
Sun May 16 11:01:52 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* libxslt/xslt.c: fixed a weird namespace bug #141532
	* tests/docs/Makefile.am tests/docs/bug-14[89].xml
	  tests/general/Makefile.am tests/docs/bug-14[89]*: added tests
	  to the regression for bug #141532

Sun May  2 23:47:43 PDT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/imports.c: added comments and function header,
	  improved logic of routine just added.
	* tests/general/bug-147*, tests/docs/bug-147.xml,
	  tests/general/Makefile.am, tests/docs/Makefile.am: added
	  regression test for bug 141279

Sun May  2 12:47:32 PDT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/imports.c: enhanced normalization of comp steps
	  when an imported stylesheet has it's own imports
	  (bug 141279)

Sat May  1 10:35:03 PDT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/transform.c: added code to recognize
	  disable-output-escaping on certain text nodes (bug 140755)
	* tests/general/bug-100.out: regenerated to account for change
	  from next ChangeLog entry (bug 140558)

Wed Apr 28 18:17:24 PDT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/xsltutils.c: suppressed any automatic linefeed after
	  a comment following the document root element (bug 140558)

Thu Apr 22 08:38:35 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: fix a problem where we updated an
	  ELEMENT node psvi field as if it was a DOCUMENT one, leading
	  to a subtle crash later, valgrind rules.

The Apr 20 00:22:37 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libexslt/strings.c: fixed bug in UTF8 string tokenize
	  kindly reported by Vasily Tchekalkin
