@@ -1,0 +1,9 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<xsl:stylesheet xmlns:xsl="http://www.w3.org/1999/XSL/Transform"
+                version="1.0">
+  <xsl:template match="/">
+    <root xmlns="urn:A" xmlns:b="urn:B" xmlns:a="urn:A">
+      <Product a:ID="1001"/>
+    </root>
+  </xsl:template>
+</xsl:stylesheet>
